--- a/Webb-App/web_app/index.html
+++ b/Webb-App/web_app/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Elliot my glorious king</title>
-    <style>
-      .picture {
-        width: 250px;
-      }
-      img {
-        width: 100%;
-      }
-    </style>
+    
   </head>
+<div class = "wrapper">
+ 
   <body>
-    <h1>Welcome to my website</h1>
-    <h2>A website dedicated to my savior</h2>
+    <header>
+      <h1>Welcome to my website</h1>
+      <h2>A website dedicated to my savior</h2>
+      
+    </header>
+    <main>
     <p>
       my goals in technoligy and specifically coding are to be carried <br />
       to a credit by this man. I wish to get an 80 in this class as well and
@@ -30,10 +30,13 @@
         alt="a picture of Elliot Tam"
       />
     </div>
+    </main>
     <footer>
       by Geoffrey Stevens, <br />
       contact me at
       <a href="mailto:422geoff@gmail.com" target="_blank"> my email</a>
-    </footer>
+    </footer> 
+  </div>
   </body>
+
 </html>
