styles and connected Web app to RPS project

--- a/Webb-App/web_app/index.html
+++ b/Webb-App/web_app/index.html
@@ -26,9 +26,16 @@
 
     <div class="picture">
       <img
-        src="/6DF943F4-D08E-4C31-945C-315C22CFAB20_1_201_a.jpeg"
+        src="./assest/6DF943F4-D08E-4C31-945C-315C22CFAB20_1_201_a.jpeg"
         alt="a picture of Elliot Tam"
       />
+    </div>
+    <div class="culminating">
+      <div>
+        <img src="./assest/Owen-Powell-is-sexy.png" alt="">
+        <p>
+        For my final culmnating project I made Rock Paper Scissors. Above is an image of my website, my game is immediately accessible by play by selecting your choice. making this game was very challenging for me because I had to get diffrent reults from the same buttons each time you click them. I solved this by adding an if statment to my function and a variable to to track the round. In the future I plan on expanding the options of my game to 12 with the RPS+ ruleset that involves more moves and less chance of ties. <a href="./RPS.html">Visit my website here</a></p>
+      </div>
     </div>
     </main>
     <footer>
